# rtp2httpd

./: CMakeLists.txt  README.en.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  rtp2httpd.conf
.agents/skills/release/: SKILL.md
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/en/: index.md
docs/en/guide/: access-log.md  installation.md  web-player.md
docs/en/reference/: configuration.md  related-resources.md
docs/guide/: access-log.md  installation.md  web-player.md
docs/reference/: configuration.md  related-resources.md
e2e/: test_config.py  test_flow_control.py  test_http_proxy_m3u_rewrite.py  test_ipv6.py  test_pages.py  test_pid_file.py  test_rtsp_misc.py  test_worker_recovery.py
e2e/helpers/: __init__.py  http.py  mock_http.py  mock_rtsp.py  ports.py
openwrt-support/luci-app-rtp2httpd/: Makefile.versioned
openwrt-support/rtp2httpd/: Makefile.versioned
scripts/: build-ikuai-ipkg.sh  generate-versioned-makefiles.sh  install-armbian.sh  install-openwrt.sh  uninstall-armbian.sh
src/: access_log.c  configuration.c  configuration.h  connection.c  connection.h  embedded_web.c  embedded_web.h  embedded_web_data.h  http.c  http.h  http_chunked_decoder.h  http_proxy.c  http_proxy.h  http_proxy_rewrite.h  pid_file.c  pid_file.h  platform_compat.h  settings_api.c  settings_api.h  status.c  status.h  supervisor.c  utils.c  utils.h  worker.c  worker.h
tools/devlab/: README.md  devlab.py
web-ui/: player.html  setting.html  status.html  vite.config.ts
web-ui/src/: index.css  vite-env.d.ts
(+107 files in other folders)
