[project]
name = "rtp2httpd"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "scapy>=2.7.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "basedpyright>=1.39.3",
    "clang-format>=22.1.4",
]

[tool.ruff]
line-length = 120
# Pin below the project's actual requires-python (3.14): ruff 0.15.x's
# formatter mis-renders `except (A, B):` as invalid `except A, B:` under an
# inferred/explicit py314 target. py313 has no syntax differences that matter
# here and avoids the bug.
target-version = "py313"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["e2e", "tools"]
exclude = ["**/node_modules", "**/__pycache__", "toolchain"]

[tool.pytest.ini_options]
testpaths = ["e2e"]
markers = [
    "multicast: requires multicast on loopback",
    "rtsp: requires mock RTSP server",
    "fcc: requires mock FCC server",
    "http_proxy: requires mock HTTP upstream",
    "slow: tests that take longer",
]
